RESOLVED FIXED195399
[WinCairo][WebKit] Nothing is drawn after Web process crashed
https://bugs.webkit.org/show_bug.cgi?id=195399
Summary [WinCairo][WebKit] Nothing is drawn after Web process crashed
Fujii Hironori
Reported 2019-03-06 23:04:08 PST
[WinCairo][WebKit] Nothing is drawn after Web process crashed 1. Start MiniBrowser (default mode is modern WebKit WebView Window) 2. Go to https://webkit.org 3. Kill WebKitWebProcess.exe by using Windows Task Manager 4. Go to https://webkit.org 5. Nothing is drawn
Attachments
Patch (1.57 KB, patch)
2019-03-06 23:12 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2019-03-06 23:06:02 PST
PageClientImpl::viewSize returns 0x0 size after Web process crashed. The original implementation (Bug 52175) was using GetClientRect.
Fujii Hironori
Comment 2 2019-03-06 23:12:53 PST
Alex Christensen
Comment 3 2019-03-07 09:24:43 PST
Comment on attachment 363849 [details] Patch r=me build failure looks suspicious.
Don Olmstead
Comment 4 2019-03-07 09:29:34 PST
(In reply to Alex Christensen from comment #3) > Comment on attachment 363849 [details] > Patch > > r=me > build failure looks suspicious. WinCairo has been broken since r242596 and the compile output looks the same here. I think this is safe to cq+ since the build output is unrelated.
Fujii Hironori
Comment 5 2019-03-07 17:35:49 PST
Comment on attachment 363849 [details] Patch Clearing flags on attachment: 363849 Committed r242625: <https://trac.webkit.org/changeset/242625>
Fujii Hironori
Comment 6 2019-03-07 17:35:52 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2019-03-07 17:42:05 PST
Note You need to log in before you can comment on or make changes to this bug.