[WinCairo][WebKit] Nothing is drawn after Web process crashed https://bugs.webkit.org/show_bug.cgi?id=195399

Reviewed by Alex Christensen.

PageClientImpl::viewSize returned 0x0 size after Web process
crashed. Restored the original implementation using GetClientRect
(Bug 52175).

* UIProcess/win/PageClientImpl.cpp:
(WebKit::PageClientImpl::viewSize):

Canonical link: https://commits.webkit.org/209763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242625 268f45cc-cd09-0410-ab3c-d52691b4dbfc